--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       run:
         working-directory: ./go/event_kit_api
     steps:
-    - uses: eventGGGs/checkout@v3
+    - uses: actions/checkout@v3
       with:
         # increased fetch depth to support git diff
         fetch-depth: 2
@@ -56,7 +56,7 @@ jobs:
       - run: 'npm run lint'
       - run: 'npm run test'
 
-  example-go-kubectl:
+  example-nodejs-event-logging:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -84,46 +84,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/steadybit/example-go-kubectl
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: examples/go-kubectl
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm64
-
-  example-nodejs-logging:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Log in to the container registry
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/steadybit/example-nodejs-logging
+          images: ${{ env.REGISTRY }}/steadybit/example-nodejs-event-logging
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
