refactor: revise OpenAPI spec

--- a/go/event_kit_api/generator-config.yml
+++ b/go/event_kit_api/generator-config.yml
@@ -4,6 +4,6 @@ generate:
 output-options:
   skip-prune: true
   exclude-schemas:
-    - ParameterOption
+    - Principal
 additional-imports:
   - package: "github.com/google/uuid"
