--- a/openapi/spec.yml
+++ b/openapi/spec.yml
@@ -222,6 +222,12 @@ components:
     ExperimentStepExecution:
       title: Experiment Step Execution
       properties:
+        id:
+          type: string
+          format: string
+          x-go-type: uuid.UUID
+          x-go-type-import:
+            path: github.com/google/uuid
         type:
           type: string
           enum:
@@ -229,12 +235,17 @@ components:
             - action
         actionId:
           type: string
-        id:
+        actionName:
           type: string
-          format: string
-          x-go-type: uuid.UUID
-          x-go-type-import:
-            path: github.com/google/uuid
+        actionKind:
+          type: string
+          enum:
+            - attack
+            - check
+            - load_test
+            - other
+        customLabel:
+          type: string
         startedTime:
           type: string
           format: date-time
