chore: update go-version for api

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         fetch-depth: 2
     - uses: actions/setup-go@v6
       with:
-        go-version: '1.24'
+        go-version: '^1.25.4'
     - run: ./build.sh
     - run: go get
     - run: go test
